// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for saleswings's submitTrackEvent destination action: all fields 1`] = `
Object {
  "anonymousID": "anonId1234",
  "data": "Test Event",
  "email": "acorob@komma.net",
  "kind": "Track",
  "timestamp": "2022-12-18T13:46:53.652Z",
  "url": "HL3Gau",
  "userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 9_1 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1",
  "userID": "user1234",
  "values": Object {
    "anonymousID": "HL3Gau",
    "data": "HL3Gau",
    "email": "acorob@komma.net",
    "kind": "HL3Gau",
    "referrerUrl": "HL3Gau",
    "timestamp": "2021-02-01T00:00:00.000Z",
    "url": "HL3Gau",
    "userAgent": "HL3Gau",
    "userID": "HL3Gau",
    "values": Object {
      "testType": "HL3Gau",
    },
  },
}
`;

exports[`Testing snapshot for saleswings's submitTrackEvent destination action: required fields 1`] = `
Object {
  "anonymousID": "anonId1234",
  "data": "Test Event",
  "kind": "Track",
  "timestamp": "2022-12-18T13:46:53.632Z",
  "url": "https://segment.com/academy/",
  "userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 9_1 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1",
  "userID": "user1234",
  "values": Object {
    "data": "HL3Gau",
    "kind": "HL3Gau",
  },
}
`;
